infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: example.org.vn
      http:
        paths:
          # - path: /v1/api
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: backend
          #       port:
          #         number: 5000
          - path: /api-docs
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
